@@ -663,9 +663,9 @@ void TestGLATOptimize::test_one_binned_optimizer(const std::string& datadir,
         obs.optimize(opt);
         test_try_success();
         for (int i = 0, j = 0; i < obs.models().size(); ++i) {
-            const GModel* model = obs.models()[i];
-            for (int k = 0; k < model->size(); ++k) {
-                GModelPar par  = (*model)[k];
+            const GModel& model = obs.models()[i];
+            for (int k = 0; k < model.size(); ++k) {
+                GModelPar par = model[k];
                 std::string msg = "Verify optimization result for " + par.print();
                 test_value(par.real_value(), fit_results[j++], 5.0e-5, msg);
                 test_value(par.real_error(), fit_results[j++], 5.0e-5, msg);
