@@ -162,17 +162,16 @@ GModels& GModels::operator= (const GModels& models)
 
 
 /***********************************************************************//**
- * @brief Return pointer to model
+ * @brief Return model
  *
  * @param[in] index Model index (0,...,size()-1).
  *
  * @exception GException::out_of_range
  *            Model index is out of range.
  *
- * Returns a pointer to the model with the specified @p index.
- * The return value will never be NULL.
+ * Returns the model with the specified @p index.
  ***************************************************************************/
-GModel* GModels::operator[](const int& index)
+GModel& GModels::operator[](const int& index)
 {
     // Compile option: raise exception if index is out of range
     #if defined(G_RANGE_CHECK)
@@ -182,22 +181,21 @@ GModel* GModels::operator[](const int& index)
     #endif
 
     // Return pointer
-    return m_models[index];
+    return *(m_models[index]);
 }
 
 
 /***********************************************************************//**
- * @brief Return pointer to model (const version)
+ * @brief Return model (const version)
  *
  * @param[in] index Model index (0,...,size()-1).
  *
  * @exception GException::out_of_range
  *            Model index is out of range.
  *
- * Returns a pointer to the model with the specified @p index.
- * The return value will never be NULL.
+ * Returns the model with the specified @p index.
  ***************************************************************************/
-const GModel* GModels::operator[](const int& index) const
+const GModel& GModels::operator[](const int& index) const
 {
     // Compile option: raise exception if index is out of range
     #if defined(G_RANGE_CHECK)
@@ -207,22 +205,21 @@ const GModel* GModels::operator[](const int& index) const
     #endif
 
     // Return pointer
-    return m_models[index];
+    return *(m_models[index]);
 }
 
 
 /***********************************************************************//**
- * @brief Return pointer to model
+ * @brief Return model
  *
  * @param[in] name Model name.
  *
  * @exception GException::model_not_found
  *            Model with specified name not found in container.
  *
- * Returns a pointer to the model with the specified @p name.
- * The return value will never be NULL.
+ * Returns the model with the specified @p name.
  ***************************************************************************/
-GModel* GModels::operator[](const std::string& name)
+GModel& GModels::operator[](const std::string& name)
 {
     // Get parameter index
     int index = get_index(name);
@@ -233,22 +230,21 @@ GModel* GModels::operator[](const std::string& name)
     }
 
     // Return pointer
-    return m_models[index];
+    return *(m_models[index]);
 }
 
 
 /***********************************************************************//**
- * @brief Return pointer to model (const version)
+ * @brief Return model (const version)
  *
  * @param[in] name Model name.
  *
  * @exception GException::model_not_found
  *            Model with specified name not found in container.
  *
- * Returns a pointer to the model with the specified @p name.
- * The return value will never be NULL.
+ * Returns the model with the specified @p name.
  ***************************************************************************/
-const GModel* GModels::operator[](const std::string& name) const
+const GModel& GModels::operator[](const std::string& name) const
 {
     // Get parameter index
     int index = get_index(name);
@@ -259,7 +255,7 @@ const GModel* GModels::operator[](const std::string& name) const
     }
 
     // Return pointer
-    return m_models[index];
+    return *(m_models[index]);
 }
 
 
@@ -312,13 +308,8 @@ GModels* GModels::clone(void) const
  ***************************************************************************/
 void GModels::append(const GModel& model)
 {
-    // Make deep copy of model
-    GModel* model_copy = model.clone();
-
-    // If copy is valid, append it to the container
-    if (model_copy != NULL) {
-        m_models.push_back(model_copy);
-    }
+    // Append model to the container
+    m_models.push_back(model.clone());
 
     // Set parameter pointers
     set_pointers();
@@ -349,13 +340,8 @@ void GModels::insert(const int& index, const GModel& model)
     }
     #endif
 
-    // Make deep copy of model
-    GModel* model_copy = model.clone();
-
-    // If copy is valid, insert it to the container
-    if (model_copy != NULL) {
-        m_models.insert(m_models.begin()+index, model_copy);
-    }
+    // Insert model into the container
+    m_models.insert(m_models.begin()+index, model.clone());
 
     // Set parameter pointers
     set_pointers();
@@ -387,13 +373,8 @@ void GModels::insert(const std::string& name, const GModel& model)
         throw GException::model_not_found(G_INSERT2, name);
     }
 
-    // Make deep copy of model
-    GModel* model_copy = model.clone();
-
-    // If copy is valid, insert it to the container
-    if (model_copy != NULL) {
-        m_models.insert(m_models.begin()+index, model_copy);
-    }
+    // Insert model into the container
+    m_models.insert(m_models.begin()+index, model.clone());
 
     // Set parameter pointers
     set_pointers();
@@ -479,18 +460,10 @@ void GModels::extend(const GModels& models)
         // Reserve enough space
         reserve(size() + models.size());
 
-        // Loop over all model components
+        // Loop over all model components and append deep copies to container
         for (int i = 0; i < models.size(); ++i) {
-
-            // Make deep copy of model
-            GModel* model_copy = models[i]->clone();
-
-            // If copy is valid, append it to the container
-            if (model_copy != NULL) {
-                m_models.push_back(model_copy);
-            }
-
-        } // endfor: looped over all model components
+            m_models.push_back(models[i].clone());
+        }
 
         // Set parameter pointers
         set_pointers();
